--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,8 +30,7 @@
   <div class="footer_row">
     <span>
       &copy; {{ site.time | date: '%Y' }} {{ site.title }}
-      &nbsp; | &nbsp;
-      Built with <a href="https://github.com/greenelab/lab-website-template">Lab Website Template</a>
+      &nbsp; 
     </span>
   </div>
 
