--- a/_includes/favicons.html
+++ b/_includes/favicons.html
@@ -2,22 +2,23 @@
 <link
   rel="apple-touch-icon"
   sizes="180x180"
-  href="{{ 'favicons/ios.png' | relative_url }}"
+  
+  href="{{ 'images/Lab_logo.jpg' | relative_url }}"
 />
 <link
   rel="icon"
   type="image/png"
   sizes="512x512"
-  href="{{ 'favicons/favicon.png' | relative_url }}"
+  href="{{ 'images/Lab_logo.jpg' | relative_url }}"
 />
 <link rel="manifest" href="{{ 'favicons/site.webmanifest' | relative_url }}" />
 
 <!-- https://metatags.io/ -->
 <meta
   property="og:image"
-  content="{{ 'favicons/share-thumbnail.jpg' | relative_url }}"
+  content="{{ 'images/Lab_logo.jpg' | relative_url }}"
 />
 <meta
   property="twitter:image"
-  content="{{ 'favicons/share-thumbnail.jpg' | relative_url }}"
+  content="{{ 'images/Lab_logo.jpg' | relative_url }}"
 />
