update lab photos

--- a/_includes/favicons.html
+++ b/_includes/favicons.html
@@ -19,6 +19,6 @@
   content="{{ 'images/Lab_logo.jpg' | relative_url }}"
 />
 <meta
-  property="twitter:image"
+  property="bluesky:image"
   content="{{ 'images/Lab_logo.jpg' | relative_url }}"
 />
