--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -26,10 +26,10 @@
 <meta property="og:url" content="{{ site.location }}" />
 <meta property="og:title" content="{{ title }}" />
 <meta property="og:description" content="{{ page.description | default: site.description }}" />
-<meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content="{{ site.location }}" />
-<meta property="twitter:title" content="{{ title }}" />
-<meta property="twitter:description" content="{{ page.description | default: site.description }}" />
+<meta property="bluesky:card" content="summary_large_image" />
+<meta property="bluesky:url" content="{{ site.location }}" />
+<meta property="bluesky:title" content="{{ title }}" />
+<meta property="bluesky:description" content="{{ page.description | default: site.description }}" />
 
 <!-- RSS -->
 <link
