--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -1,42 +1,87 @@
+{%- assign emptyarray = "" | split: "," -%}
+{%- assign output = site.auto-cite.output | default: "citations" | split: "/" | last | split: "." | pop | join: "" -%}
+{%- assign citations = site.data[output] | default: emptyarray -%} 
+
+{%- assign citation = nil -%}
+{%- for c in citations -%}
+  {%- if c.id == include.lookup or c.title contains include.lookup -%}
+    {%- assign citation = c -%}
+    {%- break -%}
+  {%- endif -%}
+{%- endfor -%}
+
+{%- if citation -%}
+{%- else -%}
+  {%- assign citation = include -%}
+{%- endif -%}
+
+{%- assign rich = false -%}
+{%- if include.style == "rich" -%}
+  {%- assign rich = true -%}
+{%- endif -%}
+
+{%- assign placeholder = "images/placeholder.svg" | relative_url -%}
+
 <div class="citation" data-style="{{ include.style }}">
-  {% if rich and include.image %}
+  {%- assign id = citation.id | default: "" -%}
+  {%- assign link = citation.link | default: "" -%}
+  {%- assign image = citation.image | default: "" -%}
+  {%- if rich -%}
     <div class="citation_image">
-      <a href="{{ include.link }}">
-        <img src="{{ include.image | relative_url }}"
-             onerror="this.src='{{ placeholder }}'; this.onerror=null;"
-             alt="Citation thumbnail"
-             loading="lazy">
+      <a href="{{ link }}">
+        <img
+          src="{{ image | relative_url }}"
+          onerror="this.src = '{{ placeholder }}'; this.onerror = null;"
+          data-tooltip="{{ id }}"
+          loading="lazy"
+          alt="Citation thumbnail"
+        >
       </a>
     </div>
-  {% endif %}
+  {%- endif -%}
 
   <div class="citation_text">
+    {%- assign title = citation.title | default: "" -%}
     <div class="citation_title">
-      <a href="{{ include.link }}">{{ include.title }}</a>
+      <a href="{{ link }}">
+        {{ title }}
+      </a>
     </div>
 
-    {% if include.authors %}
-    <div class="citation_authors truncate" tabindex="0">
-      {{ include.authors | join: ", " }}
+    {%- assign authors = citation.authors | default: emptyarray -%}
+    <div
+      class="citation_authors truncate"
+      tabindex="0"
+    >
+      {{ authors | join: ", " }}
     </div>
-    {% endif %}
+
+    {%- assign publisher = citation.publisher | default: "[no publisher info]" -%}
+    <!-- {%- assign date = citation.date | default: "[no date info]" -%} -->
+    {% assign source = site.data.sources | where: "id", include.id | first %}
+    {% assign date = include.date | default: source.date %}
+    {{ date | date: "%Y" }}
 
     <div class="citation_details">
-      {{ include.publisher | default: "[no publisher info]" }}
-      ·
-      {% if include.date %}
-        · {{ include.date | date: "%d %b %Y" }}
-      {% endif %}
-
+      {{ publisher }}&nbsp; · &nbsp;{{ date | date: "%Y" }}
     </div>
 
-    {% if rich %}
-      {% include tags.html tags=include.tags repo=include.repo %}
+    {%- if rich -%}
+
+      {%- assign tags = citation.tags | default: emptyarray -%}
+      {%- assign repo = citation.repo | default: "" -%}
+      {%- assign extra-links = citation.extra-links | default: emptyarray -%}
+
+      {%- include tags.html tags=tags repo=repo -%}
       <div class="citation_links">
-        {% for extra in include.extra-links %}
-          {% include link.html type=extra.type icon=extra.icon text=extra.text link=extra.link %}
-        {% endfor %}
+        {%- for extra in extra-links -%}
+          {%- assign type = extra.type | default: "" -%}
+          {%- assign icon = extra.icon | default: "" -%}
+          {%- assign text = extra.text | default: "" -%}
+          {%- assign link = extra.link -%}
+          {%- include link.html type=type icon=icon text=text link=link -%}
+        {%- endfor -%}
       </div>
-    {% endif %}
+    {%- endif -%}
   </div>
 </div>
